# baybe

./: .coveragerc  .gitignore  .mypy.ini  .pip-audit_exceptions  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLUSTER_EXECUTION_GUIDE.md  CODE_REVIEW_GUIDELINES.md  CONTRIBUTING.md  CONTRIBUTORS.md  CrabNet_AdvOpt.py  DISPATCHING_PLAN.md  README.md  TL_PROTOTYPES.md  _typos.toml  aryl_halide_CT_IM_tl.slurm  aryl_halide_CT_I_BM_tl.slurm  aryl_halide_IP_CP_tl.slurm  azure-pipelines.yml  compare_michaelewicz.py  environment.yml  ht_log.txt  index.html  issue.py  issue_michalewicz.py  lookup.pkl  michalewicz-tl-continuous_benchmarks-reproducibility-quickRun_0.13.2_2025-08-06_82391c98ed9b307baecc0573f45884736d7fc939_TESTING_result.json  michalewicz-tl-continuous_benchmarks-reproducibility-quickRun_0.13.2_2025-08-06_82391c98ed9b307baecc0573f45884736d7fc939_result.json  mkdocs.yml  mypy.ini  plotting_themes.json  pydoclint.toml  pyproject.toml  pytest.ini  reproducibility.py  reproducibility.sh  ruff.cfg  ruff.toml  ruff_general.cfg  (+7 more)
.github/: CODEOWNERS  README.md  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  gpu_tests.yml  manual_benchmark.yml  regular.yml  release.yml  reminders.yml  runner_attach_workflow.yml
0.11.0/: genindex.html  index.html  known_issues.html  objects.inv  output.json  output.txt  py-modindex.html  search.html
0.11.0/_autosummary/: baybe.acquisition.acqfs.ExpectedImprovement.html  baybe.acquisition.acqfs.LogExpectedImprovement.html  baybe.acquisition.acqfs.PosteriorMean.html  baybe.acquisition.acqfs.PosteriorStandardDeviation.html  baybe.acquisition.acqfs.ProbabilityOfImprovement.html  baybe.acquisition.acqfs.UpperConfidenceBound.html  baybe.acquisition.acqfs.html  baybe.acquisition.acqfs.qExpectedImprovement.html  baybe.acquisition.acqfs.qKnowledgeGradient.html  baybe.acquisition.acqfs.qLogExpectedImprovement.html  baybe.acquisition.acqfs.qLogNoisyExpectedImprovement.html  baybe.acquisition.acqfs.qNegIntegratedPosteriorVariance.html  (+345 more)
0.11.1/: genindex.html  index.html  known_issues.html  objects.inv  output.json  output.txt  py-modindex.html  search.html
0.11.2/: genindex.html  index.html  known_issues.html  py-modindex.html  search.html
0.11.3/: genindex.html  index.html  known_issues.html  objects.inv  output.json  output.txt  py-modindex.html  search.html
0.11.4/: genindex.html  index.html  known_issues.html  output.json  output.txt  py-modindex.html  search.html
0.12.0/: faq.html  genindex.html  index.html  known_issues.html  objects.inv  py-modindex.html  search.html
0.12.1/: faq.html  genindex.html  index.html  known_issues.html  output.json  py-modindex.html  search.html
0.12.2/: faq.html  genindex.html  index.html  known_issues.html  output.json  py-modindex.html  search.html  searchindex.js
0.13.0/: faq.html  genindex.html  index.html  known_issues.html  py-modindex.html  search.html
0.13.1/: faq.html  genindex.html  index.html  known_issues.html  py-modindex.html  search.html
0.13.2/: faq.html  genindex.html  index.html  known_issues.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.14.0/: faq.html  genindex.html  index.html  known_issues.html  output.txt  py-modindex.html  search.html  searchindex.js
0.14.1/: faq.html  genindex.html  index.html  known_issues.html  objects.inv  output.txt  py-modindex.html  search.html  searchindex.js
0.14.2/: faq.html  genindex.html  index.html  known_issues.html  objects.inv  output.txt  py-modindex.html  search.html
0.14.3/: faq.html  genindex.html  index.html  known_issues.html  output.json  output.txt  py-modindex.html  search.html  searchindex.js
0.15.0/: faq.html  genindex.html  index.html  known_issues.html  output.json  output.txt  py-modindex.html  search.html  searchindex.js
baybe/: __init__.py  _settings.py  acquisition.py  campaign.py  config.ini  config.py  constraints.py  core.py  deprecated.py  deprecation.py  exceptions.py  history.py  interval.py  objective.py  optimizer.py  parameters.py  recommender.py  scaler.py  searchspace.py  settings.py  simulation.py  strategy.py  surrogate.py  surrogates.py  symmetries.py  symmetry.py  targets.py  telemetry.py  utils.py
benchmark/: README.md  __init__.py  __main__.py  base.py  basic.py  run_benchmarks.py
benchmarks/: README.md  __init__.py  __main__.py  _priorgp.py  run.sbatch  run.sh  serialization.py  utils.py  visualize_benchmark_results.py  visualize_regression_results.py
docs/: AGENTS.md  _api_gen.rst  conf.py  faq.md  index.md  index.rst  known_issues.md  references.bib
examples/: AGENTS.md  plotting_themes.json  py_to_markdown.py  ruff.toml  tmp.py  utils.py
latest/: faq.html  genindex.html  index.html  known_issues.html  objects.inv  output.json  output.txt  py-modindex.html  search.html  searchindex.js
paper/: simulation.html  transfer_learning.html
scripts/: cli.py
stable/: .buildinfo  faq.html  genindex.html  index.html  known_issues.html  objects.inv  output.json  output.txt  py-modindex.html  search.html  searchindex.js
streamlit/: README.md  benchmarking_results.py  gp_mean_transfer_demo.py  initial_recommender.py  initial_strategy.py  single_task.py  surrogate_models.py
tests/: AGENTS.md  README.md  conftest.py  hypothesis_strategies.py  simulate_telemetry.py  strategies.py  test_acquisition.py  test_aq_functions.py  test_campaign.py  test_candidates.py  test_cardinality_constraint.py  test_config.py  test_constraints_continuous.py  test_constraints_discrete.py  test_constraints_polars.py  test_continuous.py  test_custom_parameter.py  test_custom_surrogate.py  test_deprecations.py  test_device_utils.py  test_examples.py  test_fidelity.py  test_fingerprints.py  test_gp.py  test_imports.py  test_init_strat.py  test_input_output.py  test_integration.py  test_is_non_dominated.py  test_iterations.py  test_kernel_factories.py  test_kernels.py  test_llm_recommender.py  test_lookup.py  test_mean_transfer.py  test_measurement_augmentation.py  test_meta_recommenders.py  test_metadata.py  test_objective.py  test_parameter_metadata.py  (+24 more)
tools/: audit.py
(+12647 files in other folders)
