[project]
name = "baybe"
description = "A Bayesian Back End for Design of Experiments"
authors = [
    {name = "Merck KGaA, Darmstadt, Germany"},
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python =">=3.8,<3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "Active Learning",
    "Bayesian Optmization",
    "Design of Experiments",
    "DOE",
    "Optimization",
]
dynamic = ['version']
dependencies = [
    "attrs>=22.2.0",
    "botorch>=0.8.1",
    "cattrs>=23.2.0",
    "exceptiongroup",
    "funcy>=1.17",
    "gpytorch>=1.9.1",
    "ngboost>=0.3.12",
    "numpy>=1.24.1",
    "pandas[parquet]>=1.4.2",
    "protobuf<=3.20.3",
    "scikit-learn>=1.1.1",
    "scikit-learn-extra>=0.3.0",
    "scipy>=1.10.1",
    "setuptools-scm>=7.1.0",
    "torch>=1.11.0",
    "baybe[telemetry]",
]

[project.urls]
Homepage = "https://emdgroup.github.io/baybe/"
Documentation = "https://emdgroup.github.io/baybe/_autosummary/baybe.html"
Changelog = "https://emdgroup.github.io/baybe/misc/changelog_link.html"
GitHub = "https://github.com/emdgroup/baybe/"
Issues = "https://github.com/emdgroup/baybe/issues/"

# DEV TOOLS NOTE: The versions of all dev tools should be consistent everywhere
# (pre-commit, environment.yml, requirements.txt, pyproject.toml, ...)

# AUDIT NOTE: The marked packages are secondary dependencies but their versions are
# set explicitly because the otherwise installed default versions have been flagged
# for vulnerabilities by pip-audit

[project.optional-dependencies]
chem = [
    "rdkit>=2022.3.4",
    "mordred>=1.2.0",
]

onnx = [
    "onnxruntime>=1.15.1",
    "skl2onnx>=1.15.0",
]

dev = [
    "baybe[chem]",
    "baybe[docs]",
    "baybe[examples]",
    "baybe[lint]",
    "baybe[mypy]",
    "baybe[onnx]",
    "baybe[simulation]",
    "baybe[telemetry]",
    "baybe[test]",
    "pip-audit>=2.5.5",
    "tox>=4.10.0",
]

docs = [
    "baybe[examples]", # docs cannot be built without running examples
    "furo>=2023.09.10", # Theme used for documentation
    "p2j>=1.3.2",
    "jupyter>=1.0.0",
    "myst-parser>=2.0.0",
    "sphinx>=7.1.1",
    "sphinx-autodoc-typehints>=1.24.0",
]

examples = [
    "baybe[chem]", # Required for some of the examples
    "baybe[onnx]", # Required for some of the examples
    "baybe[simulation]", # Required for some of the examples
    "matplotlib>=3.7.3",
    "openpyxl>=3.0.9",
    "pillow>=10.0.1", # Necessary due to vulnerability
    "plotly>=5.10.0",
    "seaborn>=0.12.2",
    "streamlit>=1.20.0",
    "tornado>=6.3.3", # see AUDIT NOTE, required by streamlit
]

lint = [
    "pre-commit==2.19.0", # see DEV TOOLS NOTE
    "pydoclint==0.2.1", # see DEV TOOLS NOTE
    "ruff==0.1.6", # see DEV TOOLS NOTE
    "typos==1.16.23" # see DEV TOOLS NOTE
]

mypy = [
    "mypy>=1.6.1",
    "pandas-stubs>=2.0.3.230814",
]

simulation = [
    "xyzpy>=1.2.1",
]

telemetry = [
    "opentelemetry-sdk>=1.16.0",
    "opentelemetry-propagator-aws-xray>=1.0.0",
    "opentelemetry-exporter-otlp>=1.16.0",
    "opentelemetry-sdk-extension-aws>=2.0.0",
    "requests>=2.31.0", # see AUDIT NOTE
    "urllib3>=2.0.7", # see AUDIT NOTE
]

test = [
    "hypothesis[pandas]>=6.88.4",
    "pytest>=7.2.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = 'post-release'
local_scheme = "dirty-tag"

[tool.setuptools]
packages = ["baybe"]
