[project]
name = "baybe"
description = "A Bayesian Back End for Design of Experiments"
authors = [
    {name = "Merck KGaA, Darmstadt, Germany"},
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python =">=3.10,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "Active Learning",
    "Bayesian Optmization",
    "Design of Experiments",
    "DOE",
    "Optimization",
]
dynamic = ['version']
dependencies = [
    "attrs>=24.1.0",
    "botorch>=0.9.3,<1",
    "cattrs>=23.2.0",
    "exceptiongroup",
    "funcy>=1.17,<2",
    "gpytorch>=1.9.1,<2",
    "joblib>1.4.0,<2",
    "ngboost>=0.3.12,<1",
    "numpy>=1.24.1,<2",
    "pandas>=1.4.2,<3",
    "protobuf<=3.20.3,<4",
    "scikit-learn>=1.1.1,<2",
    "scikit-learn-extra>=0.3.0,<1",
    "scipy>=1.10.1,<2",
    "setuptools-scm>=7.1.0",
    "torch>=1.13.1,<3",
    "typing_extensions>=4.7.0",

    # Telemetry:
    "opentelemetry-sdk>=1.16.0,<2",
    "opentelemetry-propagator-aws-xray>=1.0.0,<2",
    "opentelemetry-exporter-otlp>=1.16.0,<2",
    "opentelemetry-sdk-extension-aws>=2.0.0,<3",
]

[project.urls]
Homepage = "https://emdgroup.github.io/baybe/"
Documentation = "https://emdgroup.github.io/baybe/_autosummary/baybe.html"
Changelog = "https://emdgroup.github.io/baybe/misc/changelog_link.html"
GitHub = "https://github.com/emdgroup/baybe/"
Issues = "https://github.com/emdgroup/baybe/issues/"

# DEV TOOLS NOTE: The versions of all dev tools should be consistent everywhere
# (pre-commit, environment.yml, requirements.txt, pyproject.toml, ...)

# AUDIT NOTE: The marked packages are secondary dependencies but their versions are
# set explicitly because the otherwise installed default versions have been flagged
# for vulnerabilities by pip-audit

[project.optional-dependencies]
chem = [
    "rdkit>=2022.3.4",
    "mordredcommunity>=1.2.0",
]

onnx = [
    "onnx>=1.16.0", # see AUDIT NOTE, required by skl2onnx
    "onnxruntime>=1.15.1",
    "skl2onnx>=1.15.0",
]

dev = [
    "baybe[chem]",
    "baybe[docs]",
    "baybe[examples]",
    "baybe[lint]",
    "baybe[mypy]",
    "baybe[onnx]",
    "baybe[polars]",
    "baybe[simulation]",
    "baybe[test]",
    "pip-audit>=2.5.5",
    "tox-uv>=1.7.0",
    "uv>=0.3.0", #  `uv lock` (for lockfiles) is stable since 0.3.0: https://github.com/astral-sh/uv/issues/2679#event-13950215962
]

docs = [
    "baybe[examples]", # docs cannot be built without running examples
    "furo>=2023.09.10",
    "jupyter>=1.0.0",
    "jupytext>=1.16.1",
    "myst-parser>=2.0.0",
    "sphinx>=7.1.1",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-copybutton==0.5.2",
    "sphinxcontrib-bibtex>=2.6.2 ",
]

examples = [
    "baybe[chem]", # Required for some of the examples
    "baybe[onnx]", # Required for some of the examples
    "baybe[simulation]", # Required for some of the examples
    "matplotlib>=3.7.3",
    "openpyxl>=3.0.9",
    "pillow>=10.0.1", # Necessary due to vulnerability
    "plotly>=5.10.0",
    "seaborn>=0.12.2",
    "streamlit>=1.20.0",
    "tornado>=6.3.3", # see AUDIT NOTE, required by streamlit
]

lint = [
    "flake8==7.1.0", # see DEV TOOLS NOTE
    "pre-commit==3.7.1", # see DEV TOOLS NOTE
    "pydoclint==0.5.5", # see DEV TOOLS NOTE
    "pyupgrade==3.16.0", # see DEV TOOLS NOTE
    "ruff==0.5.2", # see DEV TOOLS NOTE
]

mypy = [
    "mypy>=1.10.1",
    "pandas-stubs>=2.2.2.240603",
    "funcy-stubs>=0.1.1",
    "types-seaborn>=0.13.2.20240618"
]

polars = [
    "polars[pyarrow]>=0.19.19,<2",
]

simulation = [
    "xyzpy>=1.2.1",
]

test = [
    "hypothesis[pandas]>=6.88.4",
    "tenacity>=8.5.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = 'post-release'
local_scheme = "dirty-tag"

[tool.setuptools]
packages = ["baybe"]
