[project]
name = "baybe"
description = "A Bayesian Back End for Design of Experiments"
authors = [
    {name = "Merck KGaA, Darmstadt, Germany"},
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python =">=3.10,<3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "Active Learning",
    "Bayesian Optimization",
    "Design of Experiments",
    "DOE",
    "Optimization",
]
dynamic = ['version']
dependencies = [
    "attrs>=24.1.0",
    "botorch>=0.13.0,<1",
    "cattrs>=25.2.0",
    "exceptiongroup",
    "gpytorch>=1.9.1,<2",
    "joblib>1.4.0,<2",
    "numpy>=1.24.1,<3",
    "pandas>=1.4.2,<3",
    "scikit-learn>=1.1.1,<2",
    "scipy>=1.10.1",
    "torch>=1.13.1,<3",
    "typing_extensions>=4.7.0",
]

[project.urls]
Homepage = "https://emdgroup.github.io/baybe/"
Documentation = "https://emdgroup.github.io/baybe/_autosummary/baybe.html"
Changelog = "https://emdgroup.github.io/baybe/misc/changelog_link.html"
GitHub = "https://github.com/emdgroup/baybe/"
Issues = "https://github.com/emdgroup/baybe/issues/"

# DEV TOOLS NOTE: The versions of all dev tools should be consistent everywhere
# (pre-commit, environment.yml, requirements.txt, pyproject.toml, ...)

# AUDIT NOTE: The marked packages are secondary dependencies but their versions are
# set explicitly because the otherwise installed default versions have been flagged
# for vulnerabilities by pip-audit

[project.optional-dependencies]
extras = [
    "baybe[chem]",
    "baybe[insights]",
    "baybe[onnx]",
    "baybe[polars]",
    "baybe[simulation]",
    "ngboost>=0.3.12,<1",
    "fpsample>=0.3.3; python_version < '3.13'",
]

chem = [
    "scikit-fingerprints>=1.13.1",
]

onnx = [
    "onnx>=1.16.0", # see AUDIT NOTE, required by skl2onnx
    "onnxruntime>=1.15.1",
    "skl2onnx>=1.19.1",
]

dev = [
    "baybe[examples]",
    "baybe[docs]",
    "baybe[lint]",
    "baybe[mypy]",
    "baybe[test]",
    "baybe[benchmarking]",
    "pip-audit>=2.5.5",
    "setuptools-scm>=7.1.0",
    "tox-uv>=1.7.0",
    "uv>=0.7.0",
]

insights = [
    "shap[others]>=0.46.0",
]

docs = [
    "baybe[examples]", # docs cannot be built without running examples
    "furo>=2023.09.10",
    "jupyter>=1.1.1",
    "jupytext>=1.16.4",
    "myst-parser>=4.0.0",
    "sphinx>=8.0.2",
    "sphinx-autodoc-typehints>=2.4.4",
    "sphinx-copybutton==0.5.2",
    "sphinx-paramlinks==0.6.0",
    "sphinx-design==0.6.1",
    "sphinxcontrib-bibtex>=2.6.2",
    "tqdm",
]

examples = [
    "baybe[extras]",
    "matplotlib>=3.7.3,!=3.9.1",
    "openpyxl>=3.0.9",
    "pillow>=10.0.1", # Necessary due to vulnerability
    "plotly>=5.10.0",
    "seaborn>=0.12.2",
    "streamlit>=1.37.0", # Necessary due to vulnerability
    "tornado>=6.3.3", # see AUDIT NOTE, required by streamlit
]

lint = [
    "flake8==7.3.0", # see DEV TOOLS NOTE
    "pre-commit==4.2.0", # see DEV TOOLS NOTE
    "pydoclint==0.5.5", # see DEV TOOLS NOTE
    "pyupgrade==3.20.0", # see DEV TOOLS NOTE
    "ruff==0.12.2", # see DEV TOOLS NOTE
]

mypy = [
    "mypy>=1.10.1",
    "pandas-stubs>=2.2.2.240603",
    "types-seaborn>=0.13.2.20240618",
    "types-psutil>=7.0.0.20250801"
]

polars = [
    "polars[pyarrow]>=0.19.19,<2",
]

simulation = [
    "xyzpy>=1.2.1",
]

benchmarking = [
    "baybe[chem]",
    "baybe[onnx]",
    "baybe[simulation]",
    "baybe[examples]", # Due to matplotlib
    "boto3>=1.0.0,<2",
    "GitPython>=3.0.6,<4", # GitPython<3.0.6 is necessary since older versions rely on a specific version of GitDB: https://github.com/gitpython-developers/GitPython/issues/983
    "psutil>=7.0.0",
]

test = [
    "hypothesis[pandas]>=6.88.4",
    "tenacity>=8.5.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = 'post-release'
local_scheme = "dirty-tag"
fallback_version = "0.0+unknown"

[tool.setuptools]
packages = ["baybe"]
